# fodmapp

./: .env.example  .gitignore  .koyebignore  .prettierignore  .prettierrc.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Fodmap.code-workspace  README.md  SECURITY.md  eslint.config.mjs  eslint.llm.config.mjs  fodmapp.code-workspace  package.json  pnpm-lock.yaml  turbo.json
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  auth.py  config.py  consent_chain.py  crypto_utils.py  db.py  errors.py  main.py  models.py  products_service.py  sql.py  tracking_store.py  tracking_store_meals.py  tracking_store_saved_meals.py  tracking_store_summary.py  tracking_store_symptoms.py
api/app/providers/: __init__.py  open_food_facts.py
api/app/routers/: barcodes.py  foods.py  health.py  internal_barcodes.py  me.py  me_delete.py  me_export.py  products.py  safe_harbors.py  swaps.py  sync.py  sync_dispatch.py  sync_global_ops.py  sync_outcomes.py  sync_protocol.py  sync_queue.py  tracking.py
api/app/services/: __init__.py  barcode_service.py
api/openapi/: v0-internal.yaml  v0.yaml
api/scripts/: phase3_bootstrap.py  phase3_promote.py  phase3_review_packet_overlay.py  repair_consent_event_chain.py
api/tests/: conftest.py  test_api_auth.py  test_barcodes.py  test_barcodes_integration.py  test_consent_chain.py  test_crypto_utils.py  test_errors.py  test_foods.py  test_health.py  test_import_resolution.py  test_me_delete_accepted.py  test_me_delete_outcome.py  test_me_export_accepted.py  test_me_export_manifest.py  test_me_proof_converter.py  test_me_security.py  test_models_tracking_item_validator.py  test_models_update_validators.py  test_products.py  test_safe_harbors.py  test_swaps.py  test_sync_batch_mutations.py  test_sync_conflict.py  test_sync_finalize_applied.py  test_sync_global_ops.py  test_sync_meal_dispatch.py  test_sync_reject_conflict.py  test_sync_reject_invalid_payload.py  test_sync_symptom_dispatch.py  test_tracking.py  test_tracking_daily_counts.py  test_tracking_meal_log_converter.py  test_tracking_proximity.py  test_tracking_row_converters.py  test_tracking_saved_meal_converter.py
etl/phase2/reporting/: README.md  pyproject.toml
etl/phase2/reporting/contracts/: reporting_snapshot_policy.yaml
etl/phase2/reporting/scripts/: collect_reporting.py  compare_baselines.py  (+5 more)
(+872 files in other folders)
