[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fodmapp-api"
version = "0.1.0"
description = "Read-only FastAPI surface for FODMAP food rollups and swap rules"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "psycopg[binary,pool]>=3.2.0,<4.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "PyJWT[crypto]>=2.10.0,<3.0.0",
  "PyYAML>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
]
lint = [
  "ruff>=0.6.0,<1.0.0",
]
bootstrap = [
  "openpyxl>=3.1.0,<4.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests requiring seeded PostgreSQL data",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I"]
target-version = "py39"
